# usdc_whale_detector

./: .gitignore  Cargo.toml  README.md
data/: labels.json
src/: config.rs  labels.rs  main.rs  monitor.rs  types.rs
